# LineCounter

./: .gitignore  CMakeLists.txt  LineCounter.sln
.github/workflows/: release.yaml
LineCounter/: LineCounter.cpp  LineCounter.vcxproj  imgui.ini
LineCounter/Analyzers/c_analyzer/: c_analyzer.cpp  c_analyzer.h
LineCounter/App/: line_counter_app.cpp  line_counter_app.h
LineCounter/AppFramework/: app_settings.cpp  app_settings.h  code_analyzer.cpp  common.h  counters.cpp  counters.h  tree_node.cpp  tree_node.h
LineCounter/Nodes/: file_node.cpp  file_node.h  folder_node.cpp  folder_node.h
LineCounter/UI/: window_manager.cpp  window_manager.h
src/: LineCounter.cpp  LineCounter.vcxproj  LineCounter.vcxproj.filters
src/Analyzers/c_analyzer/: c_analyzer.cpp
src/Analyzers/generic_analyzer/: generic_analyzer.cpp  generic_analyzer.h
src/App/: line_counter_app.cpp  line_counter_app.h
src/AppFramework/: app_settings.cpp  app_settings.h  code_analyzer.h  color.h  counters.h  csv.cpp  csv.h  tree_node.h
src/Nodes/: file_node.cpp  file_node.h  folder_node.cpp  folder_node.h
src/UI/: window_manager.cpp  window_manager.h
